refactor: Menu 생성시 Dto 받도록 리팩터링